website/versioned_docs/version-0.46/imagebackground.md
---
title: ImageBackground
id: imagebackground
---

A common feature request from developers familiar with the web is `background-image`. To handle this use case, you can use the `<ImageBackground>` component, which has the same props as `<Image>`, and add whatever children to it you would like to layer on top of it.

You might not want to use `<ImageBackground>` in some cases, since the implementation is very basic. Refer to `<ImageBackground>`'s [source code](https://github.com/facebook/react-native/blob/master/Libraries/Image/ImageBackground.js) for more insight, and create your own custom component when needed.

Note that you must specify some width and height style attributes.

## Example

```
return (
  <ImageBackground source={...} style={{width: '100%', height: '100%'}}>
    <Text>Inside</Text>
  </ImageBackground>
);
```

### Props

- [`Image` props...](image.md#props)
- [`style`](imagebackground.md#style)
- [`imageStyle`](imagebackground.md#imageStyle)
- [`imageRef`](imagebackground.md#imageRef)

---

# Reference

## Props

### `style`

| Type                               | Required |
| ---------------------------------- | -------- |
| [view styles](view-style-props.md) | No       |

### `imageStyle`

| Type                                 | Required |
| ------------------------------------ | -------- |
| [image styles](image-style-props.md) | No       |

### `imageRef`

Allows to set a reference to the inner `Image` component

| Type                                                  | Required |
| ----------------------------------------------------- | -------- |
| [Ref](https://reactjs.org/docs/refs-and-the-dom.html) | No       |
